--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <!-- Add additional CSS in static file -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="icon" type="image/png" href="{% static "images/logo.jpg" %}">
 </head>
 
 <body>
