--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,7 +2,28 @@ body {
     margin-top: 20px;
 }
 
-.sidebar-nav {
-    padding: 0;
-    list-style: none;
+.background {
+    background: url("../images/back.jpg") center center/cover no-repeat;
+    opacity: 10%;
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
+.sidebar-col{
+    background-color: rgba(255,219,0, 0.5);
+}
+
+.text-ref{
+    max-width: 200px;
+    color: black;
+    font-weight:bold;
+}
+
+.page-link{
+    color: #6c757d;
 }
