--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,7 +4,7 @@ body {
 
 .background {
     background: url("../images/back.jpg") center center/cover no-repeat;
-    opacity: 10%;
+    opacity: 25%;
     display: block;
     width: 100%;
     height: 100%;
@@ -15,12 +15,12 @@ body {
 
 
 .sidebar-col{
-    background-color: rgba(255,219,0, 0.5);
+    background-color: darkolivegreen;
 }
 
 .text-ref{
     max-width: 200px;
-    color: black;
+    color: darkslategrey;
     font-weight:bold;
 }
 
