--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" href="{% static "images/logo.jpg" %}">
 </head>
 
-<body>
+<body class="background">
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-2">
