--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
     <link rel="icon" type="image/png" href="{% static "images/logo.jpg" %}">
 </head>
 
-<body class="background">
-<div class="container-fluid">
+<body>
+<div class="container-fluid background">
     <div class="row">
         <div class="col-sm-2">
 
