--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,8 @@
 </head>
 
 <body>
-<div class="container-fluid background">
+<div class="background">
+<div class="container-fluid">
     <div class="row">
         <div class="col-sm-2">
 
@@ -34,6 +35,7 @@
 
         </div>
     </div>
+</div>
 </div>
 </body>
 
