--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,15 +1,15 @@
-<ul class="sidebar-nav list-group">
+<ul class="sidebar-nav list-group sidebar-col">
   {% if user.is_authenticated %}
-    <li class="list-group-item">User: <a href="{{ user.get_absolute_url }}">{{ user.get_username }}</a></li>
-    <li class="list-group-item"><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+    <li class="list-group-item text-ref">User: <a href="{{ user.get_absolute_url }}">{{ user.get_username }}</a></li>
+    <li class="list-group-item text-ref"><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
   {% else %}
-    <li class="list-group-item"><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+    <li class="list-group-item text-ref"><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
   {% endif %}
 
   <br>
 
-  <li class="list-group-item"><a href="{% url 'taxi:index' %}">Home</a></li>
-  <li class="list-group-item"><a href="{% url 'taxi:driver-list' %}">All drivers</a></li>
-  <li class="list-group-item"><a href="{% url 'taxi:car-list' %}">All cars</a></li>
-  <li class="list-group-item"><a href="{% url 'taxi:manufacturer-list' %}">All manufacturers</a></li>
+  <li class="list-group-item text-ref"><a href="{% url 'taxi:index' %}">Home</a></li>
+  <li class="list-group-item text-ref"><a href="{% url 'taxi:driver-list' %}">All drivers</a></li>
+  <li class="list-group-item text-ref"><a href="{% url 'taxi:car-list' %}">All cars</a></li>
+  <li class="list-group-item text-ref"><a href="{% url 'taxi:manufacturer-list' %}">All manufacturers</a></li>
 </ul>
