--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-<div class="background">
+<div class="background"></div>
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-2">
@@ -35,7 +35,6 @@
 
         </div>
     </div>
-</div>
 </div>
 </body>
 
